fixed spacing between logo and copyright in footer

--- a/mystyle.css
+++ b/mystyle.css
@@ -430,6 +430,10 @@ footer {
   width: 100%;
 }
 
+.footer-logo {
+  padding-right: 1rem;
+}
+
 @media screen and (min-width: 400px) {
   .weather {
     display: inline-block !important;
